...
    self.ysg_hideSeparatorLinesWhenShowingEmptyView = YES;
    
    //
    // Add navigation buttons
    //
    
    UIBarButtonItem *cancelButton = [[UIBarButtonItem alloc] initWithTitle:NSLocalizedString(@"Cancel", @"Cancel") style:UIBarButtonItemStylePlain target:self action:@selector(cancelButtonTap:)];
    
    UIBarButtonItem *inviteButton = [[UIBarButtonItem alloc] initWithTitle:NSLocalizedString(@"Invite", @"Invite") style:UIBarButtonItemStylePlain target:self action:@selector(inviteButtonTap:)];
    
    self.navigationItem.leftBarButtonItem = cancelButton;
    self.navigationItem.rightBarButtonItem = inviteButton;

...
    [searchContainerView addSubview:self.searchController.searchBar];
    
    self.definesPresentationContext = YES;
    
    id barButtonAppearanceInSearchBar = [UIBarButtonItem appearanceWhenContainedIn:[UISearchBar class], nil];
    
    [barButtonAppearanceInSearchBar setTitle:@"Done"];
}

- (void)dealloc
{
    [self.searchController.view removeFromSuperview];
}
...
