...
                    [self.alertController addAction:object];
                }
            }
        }
        else
        {
            UIAlertAction *action = [UIAlertAction actionWithTitle:NSLocalizedString(@"Ok", @"Ok")
                                                             style:UIAlertActionStyleDefault
                                                           handler:^(UIAlertAction *_Nonnull action) {
                                                             [self.alertController dismissViewControllerAnimated:YES completion:nil];
                                                             self.alertController = nil;
                                                           }];

...
